--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Consult">
+        android:theme="@style/AppTheme">
         <activity android:name=".ui.LoginActivity"></activity>
         <activity android:name=".ui.RegisterActivity" />
         <activity android:name=".ui.MainActivity">
