--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.MainActivity"></activity>
-        <activity android:name=".ui.LoginActivity" />
-        <activity android:name=".ui.RegisterActivity" />
-        <activity android:name=".ui.WelcomeActivity">
+        <activity android:name=".ui.LoginActivity" android:theme="@style/NoActionBarTheme" />
+        <activity android:name=".ui.RegisterActivity"  android:theme="@style/NoActionBarTheme" />
+        <activity android:name=".ui.WelcomeActivity"  android:theme="@style/NoActionBarTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
