--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Consult">
+        <activity android:name=".ui.UserDetails">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.moringaschool.consult.ui.UserProfile">
+            </meta-data>
+        </activity>
+        <activity android:name=".ui.UserProfile">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.moringaschool.consult.ui.Dashboard">
+            </meta-data>
+        </activity>
         <activity android:name=".ui.Dashboard"></activity>
         <activity android:name=".ui.MainActivity"></activity>
         <activity android:name=".ui.LoginActivity" android:theme="@style/NoActionBarTheme" />
