--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,16 @@ android {
 dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'androidx.annotation:annotation:1.2.0'
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation 'com.github.marlonlom:timeago:4.0.3'
+
+    //noinspection GradleCompatible
+    implementation 'com.google.android.material:material:1.3.0'
+//    implementation 'android-support-v7-appcompat:23.1.1'
+    implementation 'androidx.annotation:annotation:1.2.0'
+    implementation 'androidx.viewpager:viewpager:1.0.0'
+    implementation 'org.jetbrains:annotations:15.0'
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'androidx.appcompat:appcompat:1.3.0'
