--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.moringaschool.consult">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,15 +12,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".ui.AddNewTask"></activity>
+        <activity android:name=".ui.AdminAddTaskActivity" />
         <activity android:name=".ui.TasksActivity" />
         <activity android:name=".ui.WeekViewActivity" />
         <activity android:name=".ui.EventEditActivity" />
         <activity android:name=".ui.MainActivity" />
-        <activity android:name=".ui.LoginActivity" android:theme="@style/NoActionBarTheme" />
-        <activity android:name=".ui.RegisterActivity"  android:theme="@style/NoActionBarTheme" />
-        <activity android:name=".ui.WelcomeActivity"  android:theme="@style/NoActionBarTheme">
-
+        <activity
+            android:name=".ui.LoginActivity"
+            android:theme="@style/NoActionBarTheme" />
+        <activity
+            android:name=".ui.RegisterActivity"
+            android:theme="@style/NoActionBarTheme" />
+        <activity
+            android:name=".ui.WelcomeActivity"
+            android:theme="@style/NoActionBarTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
