--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,14 +59,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:19.0.0'
     implementation 'com.firebaseui:firebase-ui:0.6.2'
     implementation platform('com.google.firebase:firebase-bom:28.1.0')
-    implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.firebase:firebase-firestore'
+//    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-auth:19.3.0'
+//    implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.firebase:firebase-firestore:21.4.2'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.google.firebase:firebase-dynamic-module-support:16.0.0-beta01'
     implementation 'com.squareup.picasso:picasso:2.71828'
 //    implementation 'br.com.simplepass:loading-button-android:2.2.0'
-   // implementation 'com.google.firebase:firebase-auth:19.3.0'
-    //implementation 'com.google.firebase:firebase-firestore:21.4.2'
-    //implementation 'com.google.firebase:firebase-storage:19.1.1'
 }
 apply plugin: 'com.google.gms.google-services'
 
