--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 //    implementation 'br.com.simplepass:loading-button-android:2.2.0'
+    //lottie-dependency
+    implementation 'com.airbnb.android:lottie:3.4.1'
 }
