--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.moringaschool.consult">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,16 +11,36 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Consult">
-        <activity android:name=".ui.SplashScreen" android:theme="@style/NoActionBarTheme">
+        <activity android:name=".ui.SplashScreen"
+            android:theme="@style/NoActionBarTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.UserDetails">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.moringaschool.consult.ui.UserProfile"/>
+        </activity>
+        <activity android:name=".ui.UserProfile">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.moringaschool.consult.ui.Dashboard"/>
+        </activity>
+        <activity android:name=".ui.Dashboard" />
         <activity android:name=".ui.MainActivity">
         </activity>
-
+        <activity
+            android:name=".ui.LoginActivity"
+            android:theme="@style/NoActionBarTheme" />
+        <activity
+            android:name=".ui.RegisterActivity"
+            android:theme="@style/NoActionBarTheme" />
+        <activity
+            android:name=".ui.WelcomeActivity"
+            android:theme="@style/NoActionBarTheme"/>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
