--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,9 +67,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-dynamic-module-support:16.0.0-beta01'
     implementation 'com.squareup.picasso:picasso:2.71828'
 //    implementation 'br.com.simplepass:loading-button-android:2.2.0'
+    //lottie-dependency
+    implementation 'com.airbnb.android:lottie:3.4.1'
+}
+=======
 }
 apply plugin: 'com.google.gms.google-services'
-
-    
-
-
