--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.UserDetails">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.moringaschool.consult.ui.UserProfile"/>
         <activity android:name=".ui.TasksActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -34,7 +38,10 @@
         <activity android:name=".ui.UserProfile">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.consult.ui.Dashboard"></meta-data>
+                android:value="com.moringaschool.consult.ui.Dashboard"/>
+        </activity>
+        <activity android:name=".ui.Dashboard" />
+        <activity android:name=".ui.MainActivity">
         </activity>
         <activity android:name=".ui.Dashboard" />
         <activity android:name=".ui.MainActivity">
@@ -48,9 +55,11 @@
             android:theme="@style/NoActionBarTheme" />
         <activity
             android:name=".ui.WelcomeActivity"
+
+            android:theme="@style/NoActionBarTheme"/>
+
             android:theme="@style/NoActionBarTheme"></activity>
         <activity android:name=".ui.ChatRoom"></activity>
-
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
