--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,21 +19,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.UserDetails">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.consult.ui.UserProfile"/>
+
         <activity android:name=".ui.TasksActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.consult.ui.Dashboard"></meta-data>
+                android:value="com.moringaschool.consult.ui.Dashboard"/>
         </activity>
         <activity android:name=".ui.WeekViewActivity" />
         <activity android:name=".ui.EventEditActivity" />
         <activity android:name=".ui.UserDetails">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.consult.ui.UserProfile"></meta-data>
+                android:value="com.moringaschool.consult.ui.UserProfile"/>
         </activity>
         <activity android:name=".ui.UserProfile">
             <meta-data
@@ -43,10 +40,6 @@
         <activity android:name=".ui.Dashboard" />
         <activity android:name=".ui.MainActivity">
         </activity>
-        <activity android:name=".ui.Dashboard" />
-        <activity android:name=".ui.MainActivity">
-
-        </activity>
         <activity
             android:name=".ui.LoginActivity"
             android:theme="@style/NoActionBarTheme" />
@@ -55,11 +48,8 @@
             android:theme="@style/NoActionBarTheme" />
         <activity
             android:name=".ui.WelcomeActivity"
-
-            android:theme="@style/NoActionBarTheme"/>
-
-            android:theme="@style/NoActionBarTheme"></activity>
-        <activity android:name=".ui.ChatRoom"></activity>
+            android:theme="@style/NoActionBarTheme" />
+        <activity android:name=".ui.ChatRoom"/>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
