--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
     defaultConfig {
         applicationId "com.moringaschool.consult"
         minSdkVersion 27
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
@@ -64,12 +65,32 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui:0.6.2'
     implementation platform('com.google.firebase:firebase-bom:28.1.0')
 //    implementation 'com.google.firebase:firebase-auth'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-auth:19.3.0'
 //    implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-firestore:21.4.2'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.google.firebase:firebase-dynamic-module-support:16.0.0-beta01'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.firebase:firebase-database:20.0.0'
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.rey5137:material:1.3.1'
+    implementation 'io.github.pilgr:paperdb:2.7.1'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.3.0'
+
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.firebase:firebase-firestore:22.1.2'
+    testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.2'
+    implementation 'com.google.firebase:firebase-firestore:22.1.2'
+
 //    implementation 'br.com.simplepass:loading-button-android:2.2.0'
     //lottie-dependency
     implementation 'com.airbnb.android:lottie:3.4.1'
