--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.moringaschool.consult">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -20,39 +21,54 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ui.TaskActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.moringaschool.consult.ui.TasksActivity">
+            </meta-data>
+        </activity>
+
         <activity android:name=".ui.TasksActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.consult.ui.Dashboard"/>
+                android:value="com.moringaschool.consult.ui.Dashboard">
+            </meta-data>
         </activity>
         <activity android:name=".ui.WeekViewActivity" />
         <activity android:name=".ui.EventEditActivity" />
         <activity android:name=".ui.UserDetails">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.consult.ui.UserProfile"/>
+                android:value="com.moringaschool.consult.ui.UserProfile">
+            </meta-data>
         </activity>
         <activity android:name=".ui.UserProfile">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.consult.ui.Dashboard"/>
+                android:value="com.moringaschool.consult.ui.Dashboard">
+            </meta-data>
         </activity>
-        <activity android:name=".ui.Dashboard" />
+        <activity android:name=".ui.Dashboard"/>
         <activity android:name=".ui.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.moringaschool.consult.ui.Dashboard">
+            </meta-data>
         </activity>
-        <activity
-            android:name=".ui.LoginActivity"
-            android:theme="@style/NoActionBarTheme" />
-        <activity
-            android:name=".ui.RegisterActivity"
-            android:theme="@style/NoActionBarTheme" />
-        <activity
-            android:name=".ui.WelcomeActivity"
-            android:theme="@style/NoActionBarTheme" />
-        <activity android:name=".ui.ChatRoom"/>
+        <activity android:name=".ui.LoginActivity" android:theme="@style/NoActionBarTheme" />
+        <activity android:name=".ui.RegisterActivity"  android:theme="@style/NoActionBarTheme" />
+        <activity android:name=".ui.WelcomeActivity"  android:theme="@style/NoActionBarTheme">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
     </application>
 
 </manifest>
