add notification channels in baseapplication class

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Consult">
-        <activity android:name=".ui.PagerActivty">
+        <activity android:name=".ui.PagerActivty" android:label="@string/pager">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.moringaschool.consult.ui.Dashboard" />
@@ -91,7 +91,7 @@
             android:theme="@style/NoActionBarTheme" />
         <activity
             android:name=".ui.WelcomeActivity"
-            android:theme="@style/NoActionBarTheme"></activity>
+            android:theme="@style/NoActionBarTheme"/>
 
         <meta-data
             android:name="preloaded_fonts"
