--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,6 +110,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
+    //media-style dependency for notifications
+    implementation "androidx.media:media:1.1.0"
 }
 
 apply plugin: 'com.google.gms.google-services'
